--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,7 @@
 name: dino_radoncic_github_action_workflow
 
 on:
-  pull_requests:
+  pull_request:
     branches:
       - main
     workflow_dispatch:
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    
+    https://stackoverflow.com/questions/58849770/github-actions-invalid-workfl
     - name: Cache pip
       uses: actions/cache@v2
       with:
