--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,57 +14,48 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-  test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
+    
+    - name: Set up Python 
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.11.5
     - uses: actions/setup-node@v3
       with:
         node-version: 18
     - name: Install dependencies
-      run: npm ci
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
+   - name: Run Playwright tests
+      run: npx playwright test      
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+    - name: Unit and Integration tests
+      run: |
+        python3 manage.py test accounts.tests.AuthenticationUserTests accounts.tests.DatabaseGrab
+
+    - name: Generate code coverage report
+      run: |
+        pip install coverage
+        coverage run --source='.' manage.py test
+        coverage report
     
-  - name: Set up Python 
-    uses: actions/setup-python@v2
-    with:
-      python-version: 3.11.5
+    - name: Launch the application
+      run: |
+        python3 manage.py runserver &
+    
+    - name: End-to-End Test Execution
+      run: |
+        python3 manage.py test accounts.tests.PlaywrightAuthenticationTest
 
-  - name: Install dependencies
-    run: |
-      python -m pip install --upgrade pip
-      pip install -r requirements.txt
-
-  - name: Unit and Integration tests
-    run: |
-      python3 manage.py test accounts.tests.AuthenticationUserTests accounts.tests.DatabaseGrab
-
-  - name: Generate code coverage report
-    run: |
-      pip install coverage
-      coverage run --source='.' manage.py test
-      coverage report
-  
-  - name: Launch the application
-    run: |
-      python3 manage.py runserver &
-  
-  - name: End-to-End Test Execution
-    run: |
-      python3 manage.py test accounts.tests.PlaywrightAuthenticationTest
-
-  - name: Stop the application
-    run: pkill -f "python3 manage.py runserver"
-    continue-on-error: true
+    - name: Stop the application
+      run: pkill -f "python3 manage.py runserver"
+      continue-on-error: true
 
