--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,12 +1,10 @@
 name: dino_radoncic_github_action_workflow
 
-
 on:
-  push:
-    workflow_dispatch: {}
+  pull_requests:
     branches:
       - main
-    release:
+    workflow_dispatch:
 
 jobs:
   build:
@@ -19,24 +17,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.11.5
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 18
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-   - name: Run Playwright tests
-      run: npx playwright test      
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+
     - name: Unit and Integration tests
       run: |
         python3 manage.py test accounts.tests.AuthenticationUserTests accounts.tests.DatabaseGrab
