--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,7 @@
 name: dino_radoncic_github_action_workflow
 
 on:
-  pull_requests:
+  pull_request:
     branches:
       - main
     workflow_dispatch:
