--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        npm ci
 
     - name: Unit and Integration tests
       run: |
@@ -32,6 +33,9 @@ jobs:
         pip install coverage
         coverage run --source='.' manage.py test
         coverage report
+      
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
     
     - name: Launch the application
       run: |
@@ -40,7 +44,7 @@ jobs:
     - name: End-to-End Test Execution
       run: |
         python3 manage.py test accounts.tests.PlaywrightAuthenticationTest
-#comment
+
     - name: Stop the application
       run: pkill -f "python3 manage.py runserver"
       continue-on-error: true
