--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Generate code coverage report
       run: |
         pip install coverage
+        pip install playwright
         coverage run --source='.' manage.py test
         coverage report
       
