--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
 asgiref==3.7.2
+certifi==2023.7.22
+charset-normalizer==3.3.1
+colorclass==2.2.2
 Django==4.2.6
+docopt==0.6.2
+exceptiongroup==1.1.3
+greenlet==3.0.0
+idna==3.4
+iniconfig==2.0.0
+packaging==23.2
+pip-upgrader==1.4.15
+playwright==1.39.0
+pluggy==1.3.0
+pyee==11.0.1
+pytest==7.4.3
+requests==2.31.0
 sqlparse==0.4.4
+terminaltables==3.1.10
+tomli==2.0.1
 typing_extensions==4.8.0
+urllib3==2.0.7
