requirements.txt update

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -33,6 +33,7 @@ jobs:
         pip install coverage
         pip install playwright
         pip install channels
+        pip install daphne
         coverage run --source='.' manage.py test
         coverage report
       
