--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,42 @@
 asgiref==3.7.2
+attrs==23.1.0
+autobahn==23.6.2
+Automat==22.10.0
 certifi==2023.7.22
+cffi==1.16.0
 channels==4.0.0
 charset-normalizer==3.3.1
 colorclass==2.2.2
+constantly==23.10.4
+cryptography==41.0.5
+daphne==4.0.0
 Django==4.2.6
 docopt==0.6.2
 exceptiongroup==1.1.3
 greenlet==3.0.0
+hyperlink==21.0.0
 idna==3.4
+incremental==22.10.0
 iniconfig==2.0.0
 packaging==23.2
 pip-upgrader==1.4.15
 playwright==1.39.0
 pluggy==1.3.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
 pyee==11.0.1
+pyOpenSSL==23.3.0
 pytest==7.4.3
 requests==2.31.0
+service-identity==23.1.0
+six==1.16.0
 sqlparse==0.4.4
 terminaltables==3.1.10
 tomli==2.0.1
+Twisted==23.10.0
+txaio==23.1.1
 typing_extensions==4.8.0
 urllib3==2.0.7
+zope.interface==6.1
+daphne = "3.1.1"
