--- a/.github/workflows/ishtiaq_khan_github_action.yml
+++ b/.github/workflows/ishtiaq_khan_github_action.yml
@@ -1,9 +1,9 @@
-name: cristian_statescu_github_action
+name: ishtiaq_khan_github_action
 
 on:
   pull_request:
     branches:
-      - Cris
+      - testing
   workflow_dispatch:
 
 jobs:
