--- a/travel_itinerary/.ebextensions/django.config
+++ b/travel_itinerary/.ebextensions/django.config
@@ -1,3 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: ebdjango.wsgi:application
+    WSGIPath: travel_itinerary.travel_itinerary.wsgi:application
