Your commit message

--- a/.ebextensions/cloud_watch.config
+++ b/.ebextensions/cloud_watch.config
@@ -69,7 +69,7 @@ resources:
         Threshold: "70"                         # The alarm to trigger when CPU utilization exceeds 70%.
         ComparisonOperator: "GreaterThanThreshold"
         AlarmActions: 
-          - "arn:aws:sns:your-region:your-account-id:your-sns-topic"
+          - "arn:aws:sns:region:account-id:sns-topic"  #This part is doing an action of alarm.
 
 # Part#3: For this part, To monitor the p95, p99, and p99.9 percentiles are done in AWS CloudWatch console.
 
@@ -86,4 +86,43 @@ resources:
           - MetricName: RequestLatency
             MetricNamespace: "travel_itinerary_app/LatencyMetrics"
             MetricValue: "$latency"
+
+#Part 4: This configuration sets up a metric filter that counts all GET, POST, PUT, and DELETE requests logged in the application's access logs.
+
+resources:
+  CloudWatchMetrics:
+    RequestCountMetric:
+      Type: "AWS::CloudWatch::MetricFilter"
+      Properties:
+        LogGroupName: "/aws/elasticbeanstalk/travel_itinerary_app/var/log/httpd/access_log" 
+        FilterPattern: '"GET" || "POST" || "PUT" || "DELETE"'
+        MetricTransformations:
+          - MetricName: TotalRequestCount
+            MetricNamespace: "travel_itinerary_app/RequestMetrics"
+            MetricValue: "1"
+
+# part 5: Since I don't deploy successfully, I just do some format, 
+# if I deploy it successfully by using AWS later, I will replace the values noted below.
+
+resources:
+  CloudWatchAlarms:
+    HighCpuAlarm:
+      Type: "AWS::CloudWatch::Alarm"
+      Properties:
+        AlarmDescription: "Alarm when CPU exceeds 70%"
+        Namespace: "AWS/EC2"
+        MetricName: "CPUUtilization"
+        Dimensions:
+          - Name: "InstanceId"                  # Here need to replace with the InstanceId
+            Value: {"Ref" : "AWSEBInstanceId"}  # AWSEBInstanceId should be repaced
+        Statistic: Average
+        Period: 300
+        EvaluationPeriods: 1
+        Threshold: 80
+        ComparisonOperator: "GreaterThanThreshold"
+        AlarmActions:
+          - "arn:aws:sns:region:account-id:alarm-topic"  # This part here need to replace with my SNS topic ARN.
+        OKActions:
+          - "arn:aws:sns:region:account-id:alarm-topic" # This part here need to replace with my SNS topic ARN.
+
 
