Your commit message

--- a/.ebextensions/cloud_watch.config
+++ b/.ebextensions/cloud_watch.config
@@ -1,7 +1,7 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
 
-#Part# 1:
+#Part# 1: Step #1:
 #Since I have not deploy cloud successfully, but the things for understanding how the server responds to HTTP requests are showing below.
 
 resources:
@@ -50,7 +50,7 @@ resources:
             MetricNamespace: "travel_itinerary_app/HttpMetrics"
             MetricValue: "1"
 
-#part 2: Instance states.
+#Step #2: Instance states.
 
 resources:
   cloudwatch-alarms:
@@ -71,7 +71,7 @@ resources:
         AlarmActions: 
           - "arn:aws:sns:region:account-id:sns-topic"  #This part is doing an action of alarm.
 
-# Part#3: For this part, To monitor the p95, p99, and p99.9 percentiles are done in AWS CloudWatch console.
+# Step #3: For this part, To monitor the p95, p99, and p99.9 percentiles are done in AWS CloudWatch console.
 
 resources:
   # Custom CloudWatch metric filters and alarms
@@ -87,7 +87,7 @@ resources:
             MetricNamespace: "travel_itinerary_app/LatencyMetrics"
             MetricValue: "$latency"
 
-#Part 4: This configuration sets up a metric filter that counts all GET, POST, PUT, and DELETE requests logged in the application's access logs.
+#Step 4: This configuration sets up a metric filter that counts all GET, POST, PUT, and DELETE requests logged in the application's access logs.
 
 resources:
   CloudWatchMetrics:
@@ -101,7 +101,7 @@ resources:
             MetricNamespace: "travel_itinerary_app/RequestMetrics"
             MetricValue: "1"
 
-# part 5: Since I don't deploy successfully, I just do some format, 
+# Step 5: Since I don't deploy successfully, I just do some format, 
 # if I deploy it successfully by using AWS later, I will replace the values noted below.
 
 resources:
