--- a/.ebextensions/cloud_watch.config
+++ b/.ebextensions/cloud_watch.config
@@ -1,7 +1,8 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
-
-#Part# 1: Step #1:
+  
+#HaoLan Li Assignment12_Part1
+#Step #1:
 #Since I have not deploy cloud successfully, but the things for understanding how the server responds to HTTP requests are showing below.
 
 resources:
